--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nasa",
+  "name": "differentiation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.46.2",
-    "@clerk/nextjs": "^6.31.10",
+    "@clerk/nextjs": "6.37.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
@@ -23,9 +22,9 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
-    "next": "^16.1.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "16.1.6",
+    "react": "19.1.4",
+    "react-dom": "19.1.4",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
@@ -34,10 +33,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "24.3.1",
+    "@types/node": "20.11.30",
     "@types/react": "19.1.12",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8"
   }
